  ever to submit patches correcting them! :-)

- Support for persistent objects automatically saving and restoring their state
  was added.



3.0.2: (released 2014-xx-xx)
----------------------------

All:

- Fix silent data loss in wx[F]File::Write(wxString) if conversion fails.
- Make wxString::FromCDouble() work when the global C++ locale is not the C one.

wxGTK:

- Fix mouse handling in wxNotebook containing wxListCtrl (Charlie Fenton).

wxMSW:

- Fix Cygwin 1.7 build.
- Include x64 configurations in MSVC 8/9 project files too.
- Fix parallel build of MSVC 11/12 solutions (Artur Wieczorek).
- Fix appearance of wxToggleButtons with non default colours (Artur Wieczorek).


3.0.1: (released 2014-06-15)
----------------------------

All:

- Fix wxMBConvUTF8::ToWChar() for non-NUL-terminated strings (andyr).
- Fix length returned from wxMBConvUTF16::ToWChar(NULL) (Thomas Goyne).
- Fix wxSocket::WaitForAccept() in non-main thread (Hajo Kirchhoff).
- Fix memory overallocation in wxVector::reserve() (Nigel Paton).
- Fix `wx-config --libs` in monolithic build.
- Fix wxFileSystemWatcher::RemoveAll() (Melroy Tellis).
- Fix the build under HP-UX (tested under 11.31).
- Add Aragonese translation.

All (GUI):

- Fix crash when setting invalid label ending with "&" (ZaneUJi).
- Fix wxEditableListBox user data corruption when exchanging items
  in 64 bit builds (Tom Mettam, Rapid2D).
- Fix wxCommandProcessor::IsDirty() return value which was wrong after undoing
  all commands without saving (Neil Chittenden).
- Fix crash when Destroy()-ing a TLW with non-TLW parent.
- Fix crash in wxAuiToolBar::GetToolBarFits().
- Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
- Make wxHTML more efficient when displaying large tables (Kinaou Hervé).
- Prevent wxGrid rows/columns from becoming too small on double click.
- Fix wxGraphicsBitmap::ConvertToImage() when using Cairo.
- Support loading ICO files with data in PNG format (Artur Wieczorek).